syntax = "proto3";

package order;

option go_package = "authorizationservice/order";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string error = 2;
}